--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <p class="mt-4 fw-bold text-uppercase">telefon</p>
                 <p>32 266 94 80</p>
                 <p class="mt-4 fw-bold text-uppercase">e-mail</p>
-                <p>sklep@akg-sosnowiec.pl</p>
+                <p>akgsosnowiec@gmail.com</p>
                 <div class="contact-logo mt-5 pt-4 mb-n3 border-top">
                   AKG Sklep Moto
                 </div>
@@ -310,10 +310,13 @@
                         <label>Jaki posiadasz samochód?</label>
                         <select class="form-select">
                           <option selected></option>
-                          <option>Sportowy</option>
-                          <option>Zabytkowy</option>
-                          <option>Szybki</option>
-                          <option>Egzotyczny</option>
+                          <option>Sedan</option>
+                          <option>Kombi</option>
+                          <option>Van</option>
+                          <option>Hatchback</option>
+                          <option>Pick-up</option>
+                          <option>Kabriolet</option>
+                          <option>Inne</option>
                         </select>
                       </div>
                     </div>
@@ -322,15 +325,15 @@
                         <label>W jakiej sprawie piszesz?</label>
                         <select class="form-select">
                           <option selected></option>
-                          <option>Częsci</option>
-                          <option>Olej</option>
-                          <option>Car Audio</option>
+                          <option>Auto częsci</option>
+                          <option>Oleje i smary</option>
+                          <option>Kosmetyka samochodowa</option>
                           <option>Inne</option>
                         </select>
                       </div>
                     </div>
                     <div class="col-12">
-                      <label>Wypisz treść wiadomości</label>
+                      <label>Wpisz treść wiadomości</label>
                       <textarea class="form-control" rows="6"></textarea>
                     </div>
                     <div class="mt-3">
