--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AKG</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,6 +30,12 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 sticky-top">
       <div class="container">
+        <img
+          src="./img/LogoMiniAKG.png"
+          alt="akg logo"
+          class="img-fluid m-3"
+          width="40"
+        />
         <a class="navbar-brand red" href="#"> AKG Sklep Moto </a>
         <button
           class="navbar-toggler"
