--- a/index.html
+++ b/index.html
@@ -88,35 +88,15 @@
         </div>
         <div class="carousel-inner text-light text-center">
           <div class="carousel-item carousel-img-one active">
-            <div
-              class="carousel-caption h-100 p-5 d-flex flex-column justify-content-end justify-content-md-center align-items-center"
-            >
-              <p class="display-3">Lorem, ipsum dolor.</p>
-              <p class="d-none d-sm-block">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              </p>
-            </div>
+   
             <div class="hero-shadow"></div>
           </div>
           <div class="carousel-item carousel-img-two">
-            <div
-              class="carousel-caption h-100 p-5 d-flex flex-column justify-content-end justify-content-md-center align-items-center"
-            >
-              <p class="display-3">Lorem, ipsum dolor.</p>
-              <p class="d-none d-sm-block">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              </p>
-            </div>
+  
             <div class="hero-shadow"></div>
           </div>
           <div class="carousel-item carousel-img-three">
-            <div
-              class="carousel-caption h-100 p-5 d-flex flex-column justify-content-end justify-content-md-center align-items-center"
-            >
-              <p class="display-3">Lorem, ipsum dolor.</p>
-              <p class="d-none d-sm-block">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              </p>
+
             </div>
             <div class="hero-shadow"></div>
           </div>
@@ -260,15 +240,7 @@
             </div>
           </div>
 
-          <!--      <p class="mt-5 text-center">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-          <p class="py-3 text-muted text-center border-top">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium, ratione pariatur! Ullam tempore officia saepe
-            consequuntur itaque nihil, facilis nemo iure blanditiis
-            necessitatibus, non nesciunt impedit doloremque in optio rerum!
-          </p> -->
+
         </div>
       </section>
 
@@ -298,56 +270,37 @@
             <div class="col-md-7 col-lg-8">
               <div class="border p-5 text-center">
                 <h2>formularz kontaktowy</h2>
-                <form class="mt-5">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group mb-4">
-                        <label>Imię i nazwisko</label>
-                        <input type="text" class="form-control" />
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-4">
-                        <label>Adres mailowy</label>
-                        <input type="text" class="form-control" />
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-4">
-                        <label>Jaki posiadasz samochód?</label>
-                        <select class="form-select">
-                          <option selected></option>
-                          <option>Sedan</option>
-                          <option>Kombi</option>
-                          <option>Van</option>
-                          <option>Hatchback</option>
-                          <option>Pick-up</option>
-                          <option>Kabriolet</option>
-                          <option>Inne</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-4">
-                        <label>W jakiej sprawie piszesz?</label>
-                        <select class="form-select">
-                          <option selected></option>
-                          <option>Auto częsci</option>
-                          <option>Oleje i smary</option>
-                          <option>Kosmetyka samochodowa</option>
-                          <option>Inne</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-12">
-                      <label>Wpisz treść wiadomości</label>
-                      <textarea class="form-control" rows="6"></textarea>
-                    </div>
-                    <div class="mt-3">
-                      <button class="btn btn-primary">Wyślij!</button>
-                    </div>
+
+                <form
+                  class="formBox mb-4"
+                  action="https://formspree.io/f/myyajnka"
+                  method="POST"
+                >
+                  <label>
+                    Twój email
+                    <input
+                      class="form-control"
+                      type="email"
+                      name="email"
+                      required
+                    />
+                  </label>
+                  <label>
+                    Twoja wiadomość
+                    <textarea
+                      class="form-control"
+                      name="message"
+                      required
+                    ></textarea>
+                  </label>
+       
+                  <div>
+                    <button class="btn btn-primary" type="submit">
+                      Wyślij
+                    </button>
                   </div>
                 </form>
+          
               </div>
             </div>
           </div>
