--- a/index.html
+++ b/index.html
@@ -229,9 +229,10 @@
                 <p>ul. Wspólna 11</p>
                 <p>41-200 Sosnowiec</p>
                 <p class="mt-4 fw-bold text-uppercase">telefon</p>
-                <p>32 266 94 80</p>
+                <a href="tel:+48322669480">32 / 266 94 80</a>
+        
                 <p class="mt-4 fw-bold text-uppercase">e-mail</p>
-                <p>akgsosnowiec@gmail.com</p>
+                <a href="mailto:akgsosnowiec@gmail.com">akgsosnowiec@gmail.com</a>
                 <div class="contact-logo mt-5 pt-4 mb-n3 border-top">
                   AKG Sklep Moto
                 </div>
@@ -240,7 +241,7 @@
 
             <div class="col-md-7 col-lg-8">
               <div class="border p-5 text-center form-box">
-                <h2>formularz kontaktowy</h2>
+                <h2>FORMULARZ KONTAKTOWY</h2>
 
                 <form
                   class="formBox mb-4"
